# plane_detector_cpm

./: CMakeLists.txt  README.md  package.xml
include/candidate_segment/: candidate_segment.hpp  candidate_segment_old.hpp
include/plane_detector/: detected_plane.hpp  plane_detector.hpp
src/: test_plane_detector_scan_merge2.cpp
src/candidate_segment/: candidate_segment.cpp
